--- a/_config.yml
+++ b/_config.yml
@@ -19,7 +19,7 @@ description: >- # this means to ignore newlines until "baseurl:"
   dedicating ourselves to the proposition that a Nation so founded shall not perish from this earth.
 
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "https://ProjectLiberty2029.github.io" # the base hostname & protocol for your site, e.g. http://example.com
+url: "https://ProjectLiberty2029.info" # the base hostname & protocol for your site, e.g. http://example.com
 #twitter_username: jekyllrb
 github_username:  ProjectLiberty2029
 
